--- a/src/assets/sass/modules/_layout-specific.scss
+++ b/src/assets/sass/modules/_layout-specific.scss
@@ -364,17 +364,10 @@ body.darkmode.login {
     display: block;
 }
 
-tr {
+tr:not(.active) {
     .manage span,
     .plugin-prefs {
-        visibility: hidden;
-    }
-}
-
-tr.active {
-    .manage span,
-    .plugin-prefs {
-        visibility: visible;
+        display: none;
     }
 }
 
